; ModuleID = '/home/carl/AnghaBench/radare2/shlr/windbg/extr_transport.c_iob_close.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/windbg/extr_transport.c_iob_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*)* }

@sel_backend = common dso_local global %struct.TYPE_2__* null, align 8
@E_NOIF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iob_close(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sel_backend, align 8
  %5 = icmp ne %struct.TYPE_2__* %4, null
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @E_NOIF, align 4
  store i32 %7, i32* %2, align 4
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sel_backend, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32 (i8*)*, i32 (i8*)** %10, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 %11(i8* %12)
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %8, %6
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
